fixed align left error in about me page and from p to h3 in projects

--- a/css/genericCSS.css
+++ b/css/genericCSS.css
@@ -112,6 +112,7 @@ a:hover{
 .wrap{
 	position: absolute;
   height: auto;
+  width: 100%;
 	top: 50%;
   left: 50%;
 	transform: translate(-50%, -50%);
@@ -127,4 +128,7 @@ a:hover{
 .wrap.load {
     opacity: 1;
     padding-top: 0px;
+}
+.nav .wrap{
+	text-align: center;;
 }
