--- a/css/projCSS.css
+++ b/css/projCSS.css
@@ -23,7 +23,7 @@
 h3{
 	margin-bottom: 20px;
 }
-p{
+.cont p{
 	font-size: 2.5vw;
 	line-height: 3.5vw;
 	padding: 0px 3.5vw 0px 3.5vw;
